roles controller and tests
