# src/models/role.go
@@ -2,6 +2,8 @@ package models
 
 type Role struct {
 	ID           int          `json:"id"`
+	TenantID     int          `json:"tenantId"`
+	RoleTypeId   int          `json:"roleTypeId"`
 	Code         string       `json:"code"`
 	Name         string       `json:"name"`
 	Description  string       `json:"description"`
